# mostlyright-sdk

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION-BRIEF.md  LICENSE  PLANNING-SETUP.md  README.md  SECURITY.md  TODOS.md  biome.json  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
.changeset/: README.md  config.json
.github/: PULL_REQUEST_TEMPLATE.md  parity-trigger-paths.json
.github/ISSUE_TEMPLATE/: parity_ticket.md
.github/workflows/: docs-publish.yml  docs-required.yml  drift-rotate-ts.yml  drift-rotate.yml  parity-ticket-check.yml  release-testpypi.yml  release-ts.yml  release.yml  schema-drift.yml  test-ts.yml  test.yml  wheel-metadata-check.yml
.planning/: CROSS-SDK-SYNC.md  PROJECT.md  REQUIREMENTS.md  REVIEW-DISCIPLINE.md  ROADMAP.md  STATE.md  V02-SPLIT-FOLLOWUP.md  config.json
.planning/phase-01-5-fetcher-optimization-cross-source-parallelism/: CONTEXT.md
.planning/phase-02-core-primitives-catalog-adapters/: PLAN.md
.planning/phase-05-mcp-data-platform/: CONTEXT.md  PLAN-02-catalog-format-weather-entries.md  PLAN-04-second-vertical-macro.md  RESEARCH.md  VISION.md
.planning/phases/01-v0-14-1-parity-lift/: PLAN.md  RESEARCH.md
.planning/phases/01.5-fetcher-optimization-cross-source-parallelism/: CONTEXT.md  PLAN-01-lift-pr85.md  PLAN-02-source-limits-spike.md  PLAN-03-cross-source-parallelism.md  RESEARCH.md
.planning/phases/02-core-primitives-catalog-adapters/: PLAN.md  RESEARCH.md
.planning/phases/02.1-sprint-2o-lineage-refactor-per-source-provenance/: 02.1-PLAN-01-schema-and-validator.md  02.1-PLAN-02-merge-policy-port.md  02.1-PLAN-03-cache-layer-refactor.md  02.1-PLAN-04-integration-parity-gate.md  02.1-RESEARCH.md
.planning/phases/03.2-multi-forecast-live-path-hrrr-gfs-nbm-via-noaa-bdp/: 03.2-RESEARCH.md
.planning/phases/04-coverage-docs-cicd-release/: PLAN.md  RESEARCH.md
.planning/phases/05-mcp-data-platform/: CONTEXT.md  PLAN-00-requirements-id-cleanup.md  PLAN-01-mcp-server-skeleton-temporal-middleware.md  PLAN-02-catalog-format-weather-entries.md  PLAN-03-agent-generated-connector-pipeline.md  PLAN-04-second-vertical-macro.md  PLAN-05-integration-tests-deterministic-replay-release.md  RESEARCH.md
.planning/phases/06-pandas-3-polars-backend/: CONTEXT.md  PLAN.md  RESEARCH.md
.planning/phases/07-ingest-auto-planner-tw-weather-obs-public-surface/: 07-01-PLAN.md  07-02-PLAN.md  07-03-PLAN.md  07-04-PLAN.md  07-05-PLAN.md
.planning/phases/08-polymarket-us-coverage-per-issuer-settlement-invariants/: PLAN.md
.planning/phases/09-markets-trade-history-kalshi-polymarket/: PLAN.md
.planning/phases/10-composable-research-multi-contract-basis-trade/: PLAN.md
.planning/phases/11-live-streaming-iterator/: PLAN.md
.planning/phases/12-rename-to-mostlyright/: 12-01-PLAN.md  12-02-PLAN.md  12-03-PLAN.md  12-04-PLAN.md  12-05-PLAN.md  12-06-PLAN.md  12-07-PLAN.md  12-CONTEXT.md  12-RESEARCH.md  README.md
.planning/phases/13-pypi-publication-pipeline/: 13-CONTEXT.md  13-PLAN.md
.planning/phases/14-npm-publication-pipeline/: 14-CONTEXT.md  14-PLAN.md
.planning/phases/15-docs-autogen-landing-site/: 15-CONTEXT.md  15-PLAN.md
.planning/phases/ts-w2-parity-gate/: PLAN.md  (+9 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  INGEST-PLANNER-RESEARCH.md  MARKETS-RATE-LIMITS.md  PITFALLS.md  PYTHON-SURFACE-INVENTORY.md  SOURCE-LIMITS.md  STACK.md  SUMMARY.md  TS-CORS-MATRIX.md  TS-SDK-DESIGN.md
docs/: README.md  browser-integration.md  cache-migration.md  climate-gaps.md  design.md  forecast-sources.md  forecasts.md  ingest-strategies.md  live-streaming.md  nwp-forecasts.md  ts-quickstart.md
docs/adapters/: awc.md  cli.md  ghcnh.md  iem.md
docs/sphinx/: Makefile  conf.py  index.rst
packages-ts/: tsconfig.docs.json  typedoc.json
packages-ts/codegen/: .gitignore  README.md  package.json  tsconfig.json  tsup.config.ts
packages-ts/core/: README.md  package.json  tsup.config.ts  vitest.config.ts
packages-ts/markets/: .gitignore  README.md  package.json  tsup.config.ts
packages-ts/meta/: README.md  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
packages-ts/weather/: .gitignore  README.md  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
roadmap/: README.md  sprint0-bootstrap-status.md  sprint0-validation.md
roadmap/_archive/: ROADMAP-merged-vision.md  sprint0.md
schemas/: EXPORT_MANIFEST.json  kalshi-settlement-stations.json  polymarket-city-stations.json  qc-alpha-rules.json  source-priority.json  stations.json
schemas/json/: schema.forecast.iem_mos.v1.json  schema.forecast.station.v1.json  schema.observation.v1.json  schema.observation_ledger.v1.json  schema.observation_qc.v1.json  schema.settlement.cli.v1.json
scripts/: _phase12_rename.py  _phase12_rename_ts.py  build_python_docs.sh  build_ts_docs.sh  capture_expected_dtypes.py  check_wheel_metadata.py  escape_changelog_for_mdx.py  export_schemas.py  generate_parity_table.py  parity_status.py  parity_ticket_check.py  release-ts-preflight.mjs
spike/: SPIKE_REPORT.md  __init__.py  research_spike.py  spike_output.json
spike/forecast_limits/: README.md  __init__.py  _common.py  probe_aws_bdp.py  probe_aws_gcp_azure.py  probe_ecmwf_open.py  probe_msc.py  probe_nomads.py  run_all.sh
spike/source_limits/: README.md  __init__.py  _common.py  awc_concurrent.py  ghcnh_concurrent.py  iem_shared_ip_spike.py  test_common.py
tests/: test_coerce_pd3.py  test_cross_issuer_station_identity.py  test_drift.py  test_exact_window_mutable_period.py  test_export_schemas.py  test_live_perf.py  test_open_meteo_leakage_regression.py  test_packaging.py  test_parity.py  test_parity_forecast_schema_alias.py  test_parity_ticket_check.py  test_parity_ts_export.py  test_phase12_rewriter.py  test_wheel_layout.py
tests/fixtures/: README.md
tests/perf/: test_ingest_obs.py
tests/weather/: test_iem_asos_exact_window.py  test_obs_mutable_invariants.py  test_obs_strategy_resolver.py  test_obs_surface.py  test_obs_warm_cache_parity.py
(+339 files in other folders)
