[project]
name = "tradewinds-workspace"
version = "0.0.0"
description = "uv workspace root for tradewinds packages (not published)"
requires-python = ">=3.11"
# Declare the workspace members as deps so `uv sync` installs them in editable
# mode by default (otherwise plain `uv sync` skips members; users would need
# `uv sync --all-packages` and would hit ModuleNotFoundError on `import tradewinds`).
dependencies = [
    "tradewinds",
    "tradewinds-weather",
    "tradewinds-markets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Workspace root has no wheel artifact
bypass-selection = true

[tool.uv]
# Mark this workspace root as NOT a publishable package, even though it
# still carries a `[project]` table (which we keep so `dependencies = [...]`
# can auto-install the three workspace members on `uv sync`). Without this,
# `uv build --all-packages` emits an extra `tradewinds_workspace-0.0.0.whl`
# alongside the three publishable wheels — codex Wave 4 iter-2 HIGH on
# tests/test_wheel_layout.py.
package = false

[tool.uv.workspace]
members = ["packages/core", "packages/weather", "packages/markets"]

[tool.uv.sources]
tradewinds = { workspace = true }
tradewinds-weather = { workspace = true }
tradewinds-markets = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "pre-commit>=3.7",
    # Property-based testing for v0.2 foundations (tradewinds._v02). Added by the
    # wave-1-core port from mostlyright-mcp; kept in workspace dev so future tests
    # across packages can use hypothesis without further setup.
    "hypothesis>=6.100",
    # pandas + pyarrow are runtime deps under the `parquet` extra of `tradewinds`
    # (DataFrame return values), but they are MANDATORY for the test suite:
    # _v02 tests import pandas at collection time, and Sprint 0 parity fixtures
    # are parquet files. Putting them in dev so `uv run pytest -m "not live"`
    # works in a clean checkout without `--extra parquet` gymnastics.
    "pandas>=2.2",
    "pyarrow>=17.0",
    "respx>=0.23.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
markers = [
    "live: tests that hit live public APIs (skipped by default per testing playbook)",
]
testpaths = ["packages", "tests"]
# Include both the per-package tests under packages/*/tests AND the
# repo-root tests/ directory. The repo-root tree holds the Sprint 0 Day 3
# HARD GATE (`tests/test_parity.py`) and the packaging tests; without
# `tests` in testpaths, the parity gate is invisible to `uv run pytest -m
# live` and the documented all-tests workflow — codex iter-1 P2/HIGH on
# wave-3 ("test that won't catch what it claims" per REVIEW-DISCIPLINE).
# -m "not live" excludes live tests by default — codex W3A P2: marker labelling
# alone does not skip; CI/offline runs hit the network without this. Opt in
# explicitly: uv run pytest -m live.
addopts = "-q --strict-markers -m 'not live'"
