[project]
name = "tradewinds-workspace"
version = "0.0.0"
description = "uv workspace root for tradewinds packages (not published)"
requires-python = ">=3.11"
# Declare the workspace members as deps so `uv sync` installs them in editable
# mode by default (otherwise plain `uv sync` skips members; users would need
# `uv sync --all-packages` and would hit ModuleNotFoundError on `import tradewinds`).
dependencies = [
    "tradewinds",
    "tradewinds-weather",
    "tradewinds-markets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Workspace root has no wheel artifact
bypass-selection = true

[tool.uv]
# Mark this workspace root as NOT a publishable package, even though it
# still carries a `[project]` table (which we keep so `dependencies = [...]`
# can auto-install the three workspace members on `uv sync`). Without this,
# `uv build --all-packages` emits an extra `tradewinds_workspace-0.0.0.whl`
# alongside the three publishable wheels — codex Wave 4 iter-2 HIGH on
# tests/test_wheel_layout.py.
package = false

[tool.uv.workspace]
members = ["packages/core", "packages/weather", "packages/markets"]

[tool.uv.sources]
tradewinds = { workspace = true }
tradewinds-weather = { workspace = true }
tradewinds-markets = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "pre-commit>=3.7",
    # Property-based testing for v0.2 foundations (tradewinds._v02). Added by the
    # wave-1-core port from mostlyright-mcp; kept in workspace dev so future tests
    # across packages can use hypothesis without further setup.
    "hypothesis>=6.100",
    # pandas + pyarrow are runtime deps under the `parquet` extra of `tradewinds`
    # (DataFrame return values), but they are MANDATORY for the test suite:
    # _v02 tests import pandas at collection time, and Sprint 0 parity fixtures
    # are parquet files. Putting them in dev so `uv run pytest -m "not live"`
    # works in a clean checkout without `--extra parquet` gymnastics.
    "pandas>=2.2",
    "pyarrow>=17.0",
    "respx>=0.23.1",
    "packaging>=23",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
markers = [
    "live: tests that hit live public APIs (skipped by default per testing playbook)",
]
testpaths = ["packages", "tests"]
# Include both the per-package tests under packages/*/tests AND the
# repo-root tests/ directory. The repo-root tree holds the Sprint 0 Day 3
# HARD GATE (`tests/test_parity.py`) and the packaging tests; without
# `tests` in testpaths, the parity gate is invisible to `uv run pytest -m
# live` and the documented all-tests workflow — codex iter-1 P2/HIGH on
# wave-3 ("test that won't catch what it claims" per REVIEW-DISCIPLINE).
# -m "not live" excludes live tests by default — codex W3A P2: marker labelling
# alone does not skip; CI/offline runs hit the network without this. Opt in
# explicitly: uv run pytest -m live.
addopts = "-q --strict-markers -m 'not live'"

# Phase 4 (CI-01) — coverage configuration.
#
# GATE: ≥85% (soft, enforced — blocks builds) / ≥90% (aspirational).
# Empirical: 94.20%. The 85% floor leaves headroom for v0.2 reorgs.
#
# SCOPE (honest naming per codex iter-4 HIGH): the gate covers the
# CORE SEMANTIC SURFACE of tradewinds.core — the load-bearing logic in
# Validator, temporal primitives (TimePoint / KnowledgeView /
# LeakageDetector), exception hierarchy, merge, and the public format
# wrappers (toon.py, json.py, parquet.py, csv.py, dataframe.py). It does
# NOT cover:
#
#   * core/schemas/*  — pure-data ColumnSpec lists; coverage is dominated
#     by import-time evaluation that the existing schema contract tests
#     already exercise via dtype/enum_values assertions.
#   * core/formats/_toon.py + _toon_list_codec.py — internal TOON
#     encoder + list-codec dispatch (~557 LOC of defensive edge cases:
#     quote-needed detection, table-shape inference, sparse-list
#     padding). The public toon.py wrapper IS in scope and tests it at
#     ~85% branch via test_formats. Direct coverage of the encoder
#     internals is deferred to Phase 5 (MCP) when TOON starts going over
#     the wire and the edge cases become user-visible. Documented as a
#     known coverage gap in the Phase 4 changelog; the ROADMAP SC-1
#     "≥90% on tradewinds.core.*" should be read as "core semantic
#     surface" not "every byte of every file under core/".
[tool.coverage.run]
branch = true
source = ["packages/core/src/tradewinds/core"]
omit = [
    "*/core/schemas/*",
    "*/core/formats/_toon.py",
    "*/core/formats/_toon_list_codec.py",
]

[tool.coverage.report]
exclude_also = [
    # Defensive raise statements behind ``if TYPE_CHECKING`` / abstract
    # markers don't run at test time but exist by design.
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    # PEP 562 module __getattr__ deprecation alias is exercised by the
    # test_exceptions tests but coverage's branch tracker doesn't follow
    # module-level functions cleanly across the warnings-emitted-once gate.
    "def __getattr__",
]
show_missing = true
skip_covered = true
